[gd_scene load_steps=32 format=3 uid="uid://ce04stxhr5xvh"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_id2le"]
[ext_resource type="Script" uid="uid://0i32f2ilbkom" path="res://addons/CustomControls/Dialogs/CommandEvents/show_ballon_icon_dialog.gd" id="2_1d6ya"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="3_tbesd"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="4_5huya"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="5_v88rq"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="6_vv2s3"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="7_hpymy"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="8_h5a0w"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="9_ywcjw"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="10_yducj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iemuh"]

[sub_resource type="Gradient" id="Gradient_uww37"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j32f4"]
gradient = SubResource("Gradient_uww37")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi7xb"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_mlenc"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_06ps3"]
resource_local_to_scene = true
gradient = SubResource("Gradient_mlenc")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vuu7s"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_06ps3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8wns"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wat8g"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_ctwx1"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_relqq"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nd4b7"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_relqq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jd5p"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iu3fr"]
texture = ExtResource("7_hpymy")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_occp0"]
texture = ExtResource("8_h5a0w")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n0new"]
texture = ExtResource("9_ywcjw")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wanv4"]
texture = ExtResource("10_yducj")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yd8hk"]
texture = ExtResource("7_hpymy")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gommh"]
texture = ExtResource("8_h5a0w")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37igj"]
texture = ExtResource("9_ywcjw")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5rb3t"]
texture = ExtResource("10_yducj")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ShowBallonDialog" type="Window"]
title = "Show Ballon Scene"
position = Vector2i(0, 36)
size = Vector2i(500, 281)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_id2le")
script = ExtResource("2_1d6ya")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_iemuh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j32f4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Target" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_tbesd")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wi7xb")
style1 = SubResource("StyleBoxFlat_wi7xb")
style2 = SubResource("StyleBoxTexture_vuu7s")
style3 = SubResource("StyleBoxFlat_n8wns")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Target"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Target/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Target/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Target"

[node name="TargetOptions" parent="MarginContainer/VBoxContainer/Target/MarginContainer/VBoxContainer" instance=ExtResource("4_5huya")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Target[/title]
Select the target to show the animation on"
disabled = true
selected = 0
item_count = 1
popup/item_0/text = "Player"
popup/item_0/id = 0

[node name="BallonIconPanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_tbesd")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wat8g")
style1 = SubResource("StyleBoxFlat_wat8g")
style2 = SubResource("StyleBoxTexture_nd4b7")
style3 = SubResource("StyleBoxFlat_1jd5p")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BallonIconPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BallonIconPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BallonIconPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ballon Scene"

[node name="BallonScene" parent="MarginContainer/VBoxContainer/BallonIconPanel/MarginContainer/VBoxContainer" instance=ExtResource("5_v88rq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Choose the weather scene to be added to the current map"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Select ballon scene"

[node name="Wait" type="CheckBox" parent="MarginContainer/VBoxContainer/BallonIconPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Wait until the balloon animation is finished."
mouse_default_cursor_shape = 2
text = "wait"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_vv2s3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_iu3fr")
theme_override_styles/hover = SubResource("StyleBoxTexture_occp0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n0new")
theme_override_styles/normal = SubResource("StyleBoxTexture_wanv4")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_vv2s3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_yd8hk")
theme_override_styles/hover = SubResource("StyleBoxTexture_gommh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_37igj")
theme_override_styles/normal = SubResource("StyleBoxTexture_5rb3t")
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BallonIconPanel/MarginContainer/VBoxContainer/BallonScene" to="." method="_on_ballon_scene_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
